@@ -18,6 +18,20 @@ class RecordAirlineNotLoggedInTest extends WebTestCase {
   }
 }
 
+// Try to reuse an existing airline's code
+class RecordAirlineDuplicateICAOTest extends WebTestCase {
+  function test() {
+    global $webroot, $settings, $airline, $new_alid;
+
+    login($this);
+    $params = $airline;
+    $params["icao"] = "SIA"; // existing airline (Singapore Airlines)
+    $params += array("action" => "RECORD");
+    $msg = $this->post($webroot . "php/alsearch.php", $params);
+    $this->assertText('0;');
+  }
+}
+
 // Add new airline
 class RecordNewAirlineTest extends WebTestCase {
   function test() {
@@ -30,7 +44,22 @@ class RecordNewAirlineTest extends WebTestCase {
     $this->assertText('1;');
 
     $cols = preg_split('/[;\n]/', $msg);
-    $new_alid = $cols[1];
+    if($cols[0] == "1") {
+      $new_alid = $cols[1];
+    }
+  }
+}
+
+// Try to record it again
+class RecordAirlineDuplicateTest extends WebTestCase {
+  function test() {
+    global $webroot, $settings, $airline, $new_alid;
+
+    login($this);
+    $params = $airline;
+    $params += array("action" => "RECORD");
+    $msg = $this->post($webroot . "php/alsearch.php", $params);
+    $this->assertText('0;');
   }
 }
 
@@ -70,7 +99,7 @@ class EditWrongAirlineTest extends WebTestCase {
 
     login($this);
     $params = $airline;
-    $params["alid"] = 1;
+    $params["alid"] = 1; // this is presumably not owned by us
     $params["icao"] = "ZZZY";
     $params += array("action" => "RECORD");
     $msg = $this->post($webroot . "php/alsearch.php", $params);
@@ -79,18 +108,35 @@ class EditWrongAirlineTest extends WebTestCase {
 }
 
 // Try to reuse an existing airline's code
-class AddAirlineDuplicateICAOTest extends WebTestCase {
+class EditAirlineDuplicateICAOTest extends WebTestCase {
   function test() {
     global $webroot, $settings, $airline, $new_alid;
 
     login($this);
     $params = $airline;
     $params["icao"] = "SIA"; // existing airline (Singapore Airlines)
+    $params["alid"] = $new_alid;
     $params += array("action" => "RECORD");
     $msg = $this->post($webroot . "php/alsearch.php", $params);
     $this->assertText('0;');
   }
 }
+
+// Try to edit to overwrite existing airline
+class EditAirlineSuccessfulTest extends WebTestCase {
+  function test() {
+    global $webroot, $settings, $airline, $new_alid;
+
+    login($this);
+    $params = $airline;
+    $params["alid"] = $new_alid;
+    $params["name"] = $airline["name"] . " Edited";
+    $params += array("action" => "RECORD");
+    $msg = $this->post($webroot . "php/alsearch.php", $params);
+    $this->assertText('1;');
+  }
+}
+
 
 // Search by IATA
 class SearchAirlineByIATATest extends WebTestCase {
@@ -101,10 +147,13 @@ class SearchAirlineByIATATest extends WebTestCase {
     $params = array("iata" => $airline["iata"]);
     $msg = $this->post($webroot . "php/alsearch.php", $params);
     $this->assertText('0;1');
-    $this->assertText('"name":"' . $airline["name"] . '"');
+    $this->assertText('"name":"' . $airline["name"] . ' Edited"');
     $this->assertText('"alias":"' . $airline["alias"] . '"');
     $this->assertText('"iata":"' . $airline["iata"] . '"');
     $this->assertText('"icao":"'. $airline["icao"] . '"');
+    $this->assertText('"mode":"'. $airline["mode"] . '"');
+    $this->assertText('"active":"'. $airline["active"] . '"');
+    $this->assertText('"callsign":"'. $airline["callsign"] . '"');
   }
 }
 
@@ -117,7 +166,7 @@ class SearchAirlineByICAOTest extends WebTestCase {
     $params = array("icao" => $airline["icao"]);
     $msg = $this->post($webroot . "php/alsearch.php", $params);
     $this->assertText('0;1');
-    $this->assertText('"name":"' . $airline["name"] . '"');
+    $this->assertText('"name":"' . $airline["name"] . ' Edited"');
     $this->assertText('"alias":"' . $airline["alias"] . '"');
     $this->assertText('"iata":"' . $airline["iata"] . '"');
     $this->assertText('"icao":"'. $airline["icao"] . '"');
